--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <h2>О НАС</h2>
     <p class = "about">Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.</p>
-    <div class="button-background">
+    <div class="button-area">
         <a href="">Посмотреть услуги</a>
     </div>
 </body>
