--- a/index.html
+++ b/index.html
@@ -15,16 +15,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class = "h1">
+
+    <div class = "hero__box">
         <h1>Современные и стильные интерьеры для комфортной жизни</h1>
-        <div class="image1">
-            <p class = "image1-text">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов</p>
+        <div class="image__one">
+            <p class = "image__one-text">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов</p>
         </div>
     </div>
-    <h2>О НАС</h2>
-    <p class = "about">Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.</p>
-    <div class="button-area">
-        <a href="">Посмотреть услуги</a>
+
+    <div class="description">
+        <h2>О НАС</h2>
+        <p class = "about">Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.</p>
+        <a class="description__uslugi" href="">Посмотреть услуги</a>
     </div>
+    
+    <div class = "projects">
+
+        <h3>ПРОЕКТЫ</h3>
+
+        <img class="image__project" src="fon2.jpg" alt="">
+        <p class = "name__project">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</p>
+        <div class = description__project-button>
+            <a class = "description__project" href="">Подробнее →</a>
+        </div>
+        
+        <img class="image__project" src="fon3.jpg" alt="">
+        <p class = "name__project">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</p>
+        <div class = description__project-button>
+            <a class = "description__project" href="">Подробнее →</a>
+        </div>
+
+        <img class="image__project" src="fon4.jpg" alt="">
+        <p class = "name__project">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</p>
+        <div class = description__project-button>
+            <a class = "description__project" href="">Подробнее →</a>
+        </div>
+
 </body>
 </html>
