--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     </div>
     
     <div class = "projects">
-
         <h3>ПРОЕКТЫ</h3>
 
         <img class="image__project" src="fon2.jpg" alt="">
@@ -50,6 +49,7 @@
         <div class = description__project-button>
             <a class = "description__project" href="">Подробнее →</a>
         </div>
+    </div>
 
 </body>
 </html>
