--- a/index.html
+++ b/index.html
@@ -32,22 +32,63 @@
     <div class = "projects">
         <h3>ПРОЕКТЫ</h3>
 
-        <img class="image__project" src="fon2.jpg" alt="">
-        <p class = "name__project">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</p>
-        <div class = description__project-button>
-            <a class = "description__project" href="">Подробнее →</a>
+        <div class = "block__one">
+            <img class="image__project" src="fon2.jpg" alt="">
+            <p class = "name__project">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</p>
+            <div class = description__project-button>
+                <a class = "description__project" href="">Подробнее →</a>
+            </div>
         </div>
         
-        <img class="image__project" src="fon3.jpg" alt="">
-        <p class = "name__project">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</p>
-        <div class = description__project-button>
-            <a class = "description__project" href="">Подробнее →</a>
+        <div class = "block__two">
+            <img class="image__project" src="fon3.jpg" alt="">
+            <p class = "name__project">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</p>
+            <div class = description__project-button>
+                <a class = "description__project" href="">Подробнее →</a>
+            </div>
         </div>
 
-        <img class="image__project" src="fon4.jpg" alt="">
-        <p class = "name__project">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</p>
-        <div class = description__project-button>
-            <a class = "description__project" href="">Подробнее →</a>
+        <div class = "block__three">
+            <img class="image__project" src="fon4.jpg" alt="">
+            <p class = "name__project">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</p>
+            <div class = description__project-button>
+                <a class = "description__project" href="">Подробнее →</a>
+            </div>
+        </div>
+
+        <div class = "show__all-projects">
+            <a class = "projects__button" href="">Смотреть все проекты</a>
+        </div>
+    </div>
+
+    <div class="section">
+        <h4>Услуги</h4>
+        <div class="container">
+            <div class = container__img>
+                <img src="fon5.jpg" alt="">
+                <p class = "working">Планировочное решение — от 2500₽/м²</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class = container__img>
+                <img src="fon6.jpg" alt="">
+                <p class = "working">Дизайн-проект — от 3000₽/м²</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class = container__img>
+                <img src="fon7.jpg" alt="">
+                <p class = "working">Авторский надзор — от 30 000₽ в месяц</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class = container__img>
+                <img src="fon8.jpg" alt="">
+                <p class = "working">Комплектация — 5% от стоимости спецификации</p>
+            </div>
         </div>
     </div>
 
